##Text encoding: utf-8

2008-06-07  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcu/spectrumview.cc: fixed number of decimals in X-axis limits.

2008-05-25  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcu/spectrumdoc.cc: fixed integration.

2008-05-23  Jean Bréfort  <jean.brefort@normalesup.org>
	* programs/table/gchemtable-data-allocator.cc: data can now be changed.
	* programs/table/gchemtable-main.cc: allow linear regressions.

2008-05-22  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcu/element.h: removed obsolete prototype.
	* programs/table/gchemtable-app.cc: add a "New chart" menu item.
	* programs/table/gchemtable-app.h: ditto.
	* programs/table/gchemtable-curve.cc: ditto.
	* programs/table/gchemtable-data-allocator.cc: use vector type data list.
	* programs/table/gchemtable-data.cc: build vector type data list.
	* programs/table/gchemtable-data.h: ditto.
	* programs/table/gchemtable-main.cc: only allow scatter plots (does not
	really work because of a goffice bug).

2008-05-16  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/atom.cc: don't add hydrogens to metals.
	* libs/gcu/element.cc: add Element::IsMetallic.
	* libs/gcu/element.h: ditto.

2008-05-15  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: enhanced goffice detection.
	* glade/crystal/atoms.glade: add new radii related controls
	* libs/gcu/element.cc: fix a crash.
	* programs/crystal/atomsdlg.cc: enhance radii managing.
	* programs/crystal/atomsdlg.h: ditto.

2008-05-13  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcu/crystaldoc.cc: use VdW radii with an effective ratio
	of 40% when loading a cif file.

2008-05-10  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: we need to generate the correct desktop files
	using the API version in the executable name.
	* programs/3d/Makefile.am: ditto.
	* programs/3d/gchem3d.desktop.in: ditto.
	* programs/3d/gchem3d.desktop.in.in: ditto.
	* programs/3d/window.cc: ditto.