@@ -5,6 +5,7 @@ Version 0.9.4
 		* export more image formats (ps, pdf, eps).
 	CGhemPaint:
 		* export more image formats (ps, pdf) and enhanced eps support.
+		* no more white rectangle under atoms symbols.
 	Mozilla plugin:
 		* added support for GChemPaint and JCAMP-DX files.
 
